# rust-macros

./: CHANGELOG.md  Cargo.toml  DEBUGGING.md  DISTRIBUTED_SLICE_SOLUTIONS.md  README.md
src/: action.rs  action_registry.rs  events.rs  gateway.rs  init.rs  lib.rs  macro_debug.rs  main.rs  middleware.rs  publish.rs  registry.rs  service.rs  subscribe.rs  subscription_registry.rs  utils.rs  vmap.rs
tests/: action_macro_test.rs  basic_test.rs  common.rs  debug_demo_test.rs  debug_utils.rs  end_to_end_test.rs  lib.rs  macro_comprehensive_test.rs  macro_event_service_test.rs  simple_service_macros.rs  subscription_logger.rs  test_service_only.rs
tests/architectural_compliance/: action_macro_test.rs
tests/fixtures/services/: event_emitter_service.rs  event_listener_service.rs  mod.rs
tests/integration/: action_macro_test.rs  mod.rs
